css/main.css
:root {
  --form-dark-green: #13464d;
	--light-gray-background: #fcfcfc;
	--medium-gray: #c1c0c9;
	--dark-gray: #3e3e3e;
	--border-gray: #ededed;
	--turquoise: #00abc9;
	--standard-border-radius: 4px;
}

html{
	background-color: var(--light-gray-background);
  font-size: 16px;
	font-family: 'Alright Sans', sans-serif;
}
body{
  font-size: 62.5%;
  margin:0;
}
h1{
	font-size: 1.8em;
	margin-bottom:0.6em;
}
h2{
	font-size: 1.3em;
	margin-top:0.6em;
}
h3{
	font-size:2.5em;
	margin-top: 0;
}
h3.form-color{
	color: var(--form-dark-green);
}
h1,h2, h3{
	text-align:center;
}
p{
	font-size: 1.4em;
	letter-spacing: 0.2px;
	line-height:1.5em;
	margin-bottom:1.5em;
}
textarea:focus, input:focus{
	outline: none;
}
.bubble-container{
	display:inline-block;
	height:100%;
	width:3em;
}
.center-block{
	left: 0;
	right: 0;
	margin-left: auto;
	margin-right: auto;
}
.dark-gray{
	color:var(--dark-gray);
}
.hand-on-hover{
	cursor: hand;
	cursor: pointer;
}
.list-item-display{
	display:inline-block;
	font-size:1.3em;
	vertical-align:top;
}
.list-item-display h4{
	font-weight:400;
	margin-top:0.7em;
	margin-bottom: 0em;
}
.list-item-display p{
	color: var(--medium-gray);
	font-size: 0.9em;
	margin-top:0.3em;
}
.search-result{
	border: 1px solid var(--border-gray);
	border-radius: var(--standard-border-radius);
	height:6em;
	margin-top:1em;
	margin-bottom: 1em;
	width:100%;
}
.thin{
	font-weight:400;
}
.ultra-thin{
	font-weight:100;
}

/*FORMS*/
label > span {
	color: var(--form-dark-green);
	display:block;
	font-size:1.3em;
	margin-bottom: 0.5em;
}
.button{
	background-color: var(--light-gray-background);
	border: 1px solid var(--border-gray);
	border-radius:var(--standard-border-radius);
	display:inline-block;
	height:5.5em;
	text-align:center;
	vertical-align:top;
}
.back-button{
	width:5.5em;
}
.next-button-container{
	float:right;
	margin-bottom: 0;
	width:86%;
}
.next-button{
	text-align:center;
	width: 100%;
}
.back-button i{
	color: var(--medium-gray);
	font-size:1.5em;
	margin-top:1.3em;
}
.checkbox{
	background-color: var(--light-gray-background);
	border: 1px solid var(--border-gray);
	border-radius: 2px;
	display:inline-block;
	height: 1.5em;
	width:1.5em;
}
.checkbox-info{
	display:inline-block;
	margin-top: 0px;
	margin-left: 0.5em;
	vertical-align:top;
}
#filledInConsent{
	background-color: var(--turquoise);
	border-radius: 0.2em;
	margin:0.2em;
	height: 1.1em;
	width: 1.1em;
}
.form-box-half{
	box-sizing:border-box;
	display: inline-block;
	width:50%;
}
.form-box-half.first{
	padding-right:2%;
	margin-bottom:0;
}
.form-box-half.second{
	padding-left:2%;
}
.form-box-full{
	display: inline-block;
	margin-top:2em;
	width:100%;
}
.form-box input{
	background-color: var(--light-gray-background);
	border-radius: var(--standard-border-radius);
	border:1px solid var(--border-gray);
	box-sizing: border-box;
	display:block;
	font-size:1.4em;
	height:4em;
	padding-bottom:1em;
	padding-top:1em;
	padding-left:1.5em;
}
.form-container{
	background-color: #fff;
	border: 1px solid var(--border-gray);
	border-radius: var(--standard-border-radius);
	box-sizing: border-box;
	margin-top: 9em;
	margin-bottom:9em;
	padding:4em;
	width: 64em;
}
.form-heading{
	padding-top: 2em;
	width:300px;
}
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: var(--medium-gray);
}
::-moz-placeholder { /* Firefox 19+ */
  color: var(--medium-gray);
}
:-ms-input-placeholder { /* IE 10+ */
  color: var(--medium-gray);
}
:-moz-placeholder { /* Firefox 18- */
  color: var(--medium-gray);
}
.form-box-half input{
		width:100%;
}
.form-box-full input{
		width:100%;
}
p.submit-button{
	line-height:2em;
	vertical-align:middle;
}
p.submit-button.unvalidated{
	color: var(--medium-gray);
}
p.submit-button.validated{
	color: black;
}

/*FOOTER*/
.footer-box{
	margin:3em;
	position:absolute;
}
.footer-box.left, .footer-box.right{
	top: 800px;
}
.footer-box.center{
	top: 750px;
}
.footer-box.left{
	left: 0;
}
.footer-box.right{
	right: 0;
}
.footer-box.center{
	color: var(--medium-gray);
	margin-left:0;
	margin-right:0;
	text-align:center;
	width:100%;
	z-index: -1;
}
.footer-box.center p{
	font-size:1.5em;
	margin-bottom:0.7em;
}
img{
	height: 4em;
	width:4em;
}
a{
	border-bottom:1px solid var(--medium-gray);
	color: var(--medium-gray);
	font-weight:400;
	font-size:1.5em;	
}
#progressBar{
	background-color: #fff;
	border: 1px solid var(--medium-gray);
	border-radius: 0.5em;
	height:1em; 
	width:30em; 
}
#progressBar div.inner-bar{
	background-color: var(--border-gray);
	border-radius: 0.5em;
	height:0.6em;
	margin:2px;
}

/*MOBILE*/
body.is-mobile{
	font-size:100%;
}
body.is-mobile input{
/*	greater than 16 prevents auto focus*/
	font-size:26px;
}
body.is-mobile .form-box-half{
	width:100%;
}
body.is-mobile .form-box-half.first{
	padding-right:0;
	margin-bottom:1em;
}
body.is-mobile .form-box-half.second{
	padding-left:0;
}
body.is-mobile .form-container{
	width: 90%;
}
body.is-mobile p{
	font-size: 1em;
}
body.is-mobile p.submit-button, body.is-mobile p.checkbox-info{
	font-size: 1.4em;
}
body.is-mobile .footer-box.left{
	top: 1400px;
}
body.is-mobile .footer-box.right{
	top:1390px;
}
body.is-mobile .footer-box.center{
	top: 1300px;
}

/*MEDIA QUERIES*/
@media only screen and (max-width: 699px) {
	.form-box-half{
		width:100%;
	}
	.form-box-half.first{
		padding-right:0;
		margin-bottom:1em;
	}
	.form-box-half.second{
		padding-left:0;
	}
	.form-container{
		width: 100%;
	}
}
@media only screen and (max-width: 500px) {
	.next-button-container{
		margin-bottom: 1em;
		width:100%;
	}
	.footer-box.left{
		top: 900px;
	}
	.footer-box.right{
		top:890px;
	}
	.footer-box.center{
		top: 800px;
	}
}

